@@ -2,6 +2,8 @@ Revision history for Perl extension HTTP::BrowserDetect.
 
 {{$NEXT}}
     - Adds browserdetect.org to documentation
+    - Adds more bots to robot detection
+    - Adds robot_id(), which is currently in beta
 
 3.14 2016-05-25 11:44:10 America/Toronto
     - Slightly refactor the detection of several browsers that
